examples/errors/esin1.c
int main ()
{
	int e1;
	
	e1 = 0;
	
	fi (e1 == 0)
		println (e1);
}

